Fixes the BLAS tests and removes separate MPI configs

--- a/tests/libs/blas/src/Makefile.mkl.intel.cirrus
+++ b/tests/libs/blas/src/Makefile.mkl.intel.cirrus
@@ -3,12 +3,12 @@ MF      = Makefile.libsci
 SRC	= dgemv_benchmark.f90
 
 
-FC      = mpif90
-PP      = 
+FC      = ifort
+PP      =
 
 LDFLAGS =  -lmkl
 FFLAGS  =  -O3 $(PP)
-LIBS    = 
+LIBS    =
 
 EXE	= dgemv_mkl.x
 
@@ -28,5 +28,3 @@ $(OBJ): $(MF)
 
 clean:
 	rm -fr $(TMP) $(OBJ) $(EXE) core
-
-
