Further tuning on valid IO500 test

--- a/tests/synth/io500/src/config-valid.ini
+++ b/tests/synth/io500/src/config-valid.ini
@@ -8,7 +8,7 @@ stonewall-time = 300
 nproc = 1
 
 [ior-hard]
-segmentCount = 50000 # must set value manual, otherwise runtime explodes
+segmentCount = 50000
 
 [mdtest-hard]
-n = 80000 # must set value manual, otherwise run into Lustre issue: "No space available on device"
+n = 80000
