--- a/tests/mlperf/cosmoflow/pod-4-NVIDIA-A100-SXM4-40GB.yaml
+++ b/tests/mlperf/cosmoflow/pod-4-NVIDIA-A100-SXM4-40GB.yaml
@@ -1,29 +1,28 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  generateName: mlperf-resnet-zhtwfdde-
+  generateName: mlperf-cosmoflow-4-nvidia-a100-sxm4-40gb-wlow-
 spec:
   containers:
   - args:
-    - --nproc_per_node=8
+    - --nproc_per_node=4
     - train.py
     - -lbs
-    - '64'
+    - '16'
     - -c
-    - /workspace/ML/ResNet50/Torch/config.yaml
-    - --t_subset_size
-    - '512'
-    - --v_subset_size
-    - '256'
+    - /workspace/ML_HPC/CosmoFlow/Torch/config.yaml
     command:
     - torchrun
+    env:
+    - name: OMP_NUM_THREADS
+      value: '4'
     image: bigballoon8/mlperf-epcc
-    name: mlperf-resnet-zhtwfdde
+    name: mlperf-cosmoflow-4-nvidia-a100-sxm4-40gb-wlow
     resources:
       limits:
         cpu: 16
         memory: 32Gi
-        nvidia.com/gpu: 8
+        nvidia.com/gpu: 4
       requests:
         cpu: 16
         memory: 16Gi
@@ -32,14 +31,14 @@ spec:
       name: volume
     - mountPath: /dev/shm
       name: devshm
-    workingDir: /workspace/ML/ResNet50/Torch
+    workingDir: /workspace/ML_HPC/CosmoFlow/Torch
   nodeSelector:
     nvidia.com/gpu.product: NVIDIA-A100-SXM4-40GB
   restartPolicy: Never
   volumes:
   - name: volume
     persistentVolumeClaim:
-      claimName: imagenet-pv
+      claimName: cosmoflow-pvc
   - emptyDir:
       medium: Memory
     name: devshm
