--- a/tests/mlperf/pod-mlperf-resnet-.yaml
+++ b/tests/mlperf/pod-mlperf-resnet-.yaml
@@ -1,23 +1,29 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  generateName: mlperf-cosmoflow-4-nvidia-a100-sxm4-40gb-wlow-
+  generateName: mlperf-resnet-
+  labels:
+    kueue.x-k8s.io/queue-name:  eidf095ns-user-queue
 spec:
   containers:
   - args:
     - --nproc_per_node=4
     - train.py
     - -lbs
-    - '64'
+    - '8'
     - -c
-    - /workspace/ML_HPC/CosmoFlow/Torch/config.yaml
+    - /workspace/ML/ResNet50/Torch/config.yaml
+    - --t_subset_size
+    - '2048'
+    - --v_subset_size
+    - '1024'
     command:
     - torchrun
     env:
     - name: OMP_NUM_THREADS
       value: '4'
     image: bigballoon8/mlperf-epcc
-    name: mlperf-cosmoflow-4-nvidia-a100-sxm4-40gb-wlow
+    name: mlperf-resnet
     resources:
       limits:
         cpu: 16
@@ -31,14 +37,14 @@ spec:
       name: volume
     - mountPath: /dev/shm
       name: devshm
-    workingDir: /workspace/ML_HPC/CosmoFlow/Torch
+    workingDir: /workspace/ML/ResNet50/Torch
   nodeSelector:
     nvidia.com/gpu.product: NVIDIA-A100-SXM4-40GB
   restartPolicy: Never
   volumes:
   - name: volume
     persistentVolumeClaim:
-      claimName: cosmoflow-pvc
+      claimName: imagenet-pv
   - emptyDir:
       medium: Memory
     name: devshm
