--- a/tests/k8s/cuda-pod.yml
+++ b/tests/k8s/cuda-pod.yml
@@ -18,3 +18,5 @@ spec:
               memory: '4Gi'
               nvidia.com/gpu: 1
   restartPolicy: Never
+  nodeSelector:
+    nvidia.com/gpu.product: NVIDIA-A100-SXM4-40GB
