--- a/tests/mlperf/pod-mlperf-resnet-.yaml
+++ b/tests/mlperf/pod-mlperf-resnet-.yaml
@@ -1,24 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  generateName: mlperf-resnet-
+  generateName: testing-
   labels:
     kueue.x-k8s.io/queue-name:  eidf095ns-user-queue
 spec:
   containers:
   - args:
-    - --nproc_per_node=4
-    - train.py
-    - -lbs
-    - '8'
-    - -c
-    - /workspace/ML/ResNet50/Torch/config.yaml
-    - --t_subset_size
-    - '2048'
-    - --v_subset_size
-    - '1024'
-    command:
-    - torchrun
+    command: ["sleep", "infinity"]
     env:
     - name: OMP_NUM_THREADS
       value: '4'
@@ -28,23 +17,7 @@ spec:
       limits:
         cpu: 16
         memory: 32Gi
-        nvidia.com/gpu: 4
       requests:
         cpu: 16
         memory: 16Gi
-    volumeMounts:
-    - mountPath: /mnt/ceph_rbd
-      name: volume
-    - mountPath: /dev/shm
-      name: devshm
-    workingDir: /workspace/ML/ResNet50/Torch
-  nodeSelector:
-    nvidia.com/gpu.product: NVIDIA-A100-SXM4-40GB
   restartPolicy: Never
-  volumes:
-  - name: volume
-    persistentVolumeClaim:
-      claimName: imagenet-pv
-  - emptyDir:
-      medium: Memory
-    name: devshm
