--- a/tests/mlperf/resnet50/base_pod.yaml
+++ b/tests/mlperf/resnet50/base_pod.yaml
@@ -11,7 +11,7 @@ spec:
       image: bigballoon8/mlperf-epcc
       workingDir: '---PATH-WORKDIR---'
       command:
-        - '---ADD-CMDs---'
+        - torchrun
       args:
         - '---ADD-ARGS---'
       env:
