--- a/tests/mlperf/cosmoflow/graphcore_base_job.yaml
+++ b/tests/mlperf/cosmoflow/graphcore_base_job.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       spec:
         containers:
-        - name: mnist-training
+        - name: cosmoflow-training
           image: bigballoon8/mlperf-epcc-gc
           command: [/bin/bash, -c, --]
           args:
@@ -24,8 +24,8 @@ spec:
               python train.py -c /ML/ResNet50/Torch/config.yaml
           resources:
             limits:
-              cpu: 32
-              memory: 200Gi
+              cpu: 128
+              memory: 400Gi
           securityContext:
             capabilities:
               add:
@@ -33,10 +33,15 @@ spec:
           volumeMounts:
           - mountPath: /dev/shm
             name: devshm
+          - mountPath: /mnt/ceph_rbd
+            name: volume
         restartPolicy: Never
         hostIPC: true
         volumes:
         - emptyDir:
             medium: Memory
-            sizeLimit: 10Gi
           name: devshm
+        - name: volume
+          persistentVolumeClaim:
+            claimName: 'cosmoflow-pvc'
+        
