pyproject missing builtin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ builtins=[
     "parameter",
     "performance_function",
     "reference",
+    "require_deps",
     "run_after",
     "run_before",
     "sanity_function",
