--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
         pip install reframe-hpc
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint $(git ls-files 'tests/*.py')
         
   flake8-lint:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
     - name: flake8 Lint
       uses: py-actions/flake8@v2
       with:
-        ignore: "W503"
+        ignore: ["E203", "W503"]
         max-line-length: "120"
         path: "tests"
         plugins: "flake8-bugbear flake8-black flake8-pyproject"
